--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -42,10 +42,10 @@
 * form-control
 ---------------------------- */
 .form-control {
-  @apply border-gray-300 focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 rounded-md shadow-sm block;
+  @apply py-2 px-3 border-gray-300 border focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 rounded-md shadow-sm block;
 }
 .form-control-sm {
-  @apply form-control py-1 px-2 text-sm;
+  @apply form-control py-1 px-2 border text-sm;
 }
 .input-group {
   @apply flex items-center;
