タスク関連のコンポーネント配置変更

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,13 +13,13 @@
 * btn
 ---------------------------- */
 .btn-sm {
-  @apply inline-flex items-center justify-center px-2 py-1.5 hover:bg-opacity-5 hover:bg-gray-900 border border-transparent rounded-md text-xs uppercase tracking-widest focus:outline-none focus:ring focus:ring-gray-300 disabled:opacity-25 transition;
+  @apply whitespace-nowrap inline-flex items-center justify-center px-2 py-1.5 hover:bg-opacity-5 hover:bg-gray-900 border border-transparent rounded-md text-xs uppercase tracking-widest focus:outline-none focus:ring focus:ring-gray-300 disabled:opacity-25 transition;
 }
 .btn {
-  @apply inline-flex items-center justify-center px-4 py-2 hover:bg-opacity-5 hover:bg-gray-900 border border-transparent rounded-md text-sm uppercase tracking-widest focus:outline-none focus:ring focus:ring-gray-300 disabled:opacity-25 transition;
+  @apply whitespace-nowrap inline-flex items-center justify-center px-4 py-2 hover:bg-opacity-5 hover:bg-gray-900 border border-transparent rounded-md text-sm uppercase tracking-widest focus:outline-none focus:ring focus:ring-gray-300 disabled:opacity-25 transition;
 }
 .btn-circle {
-  @apply inline-flex items-center justify-center w-6 h-6 border border-transparent rounded-full text-xs uppercase tracking-widest focus:outline-none focus:ring focus:ring-gray-300 disabled:opacity-25 transition;
+  @apply whitespace-nowrap inline-flex items-center justify-center w-6 h-6 border border-transparent rounded-full text-xs uppercase tracking-widest focus:outline-none focus:ring focus:ring-gray-300 disabled:opacity-25 transition;
 }
 .btn-white {
   @apply bg-white hover:bg-gray-200 active:bg-gray-200 border-gray-300 focus:border-gray-400;
