--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+.logo {
+    font-family: 'lato'
+  }
 .container-fluid {
   @apply w-full px-4
 }
